fixed overflow

--- a/public/style.css
+++ b/public/style.css
@@ -65,7 +65,7 @@ header h1 {
 
 .card-body {
   max-height: 5rem;
-  overflow: scroll;
+  overflow: auto;
   border: 0.2rem solid black;
   border-radius: 5%;
   background-color: aquamarine;
